--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
 
     <!-- 微信搜索公众号『 程序员鱼皮 』，学习编程技术，发现更多好玩的项目！ -->
-    <title>合成大西瓜</title>
+    <title>マサオゲーム</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
+    <meta name="viewport"
+        content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
 
     <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -52,7 +53,7 @@
             window.history.pushState(state, state.title, state.url);
         }
     </script> -->
-<!--    <script type="text/javascript">
+    <!--    <script type="text/javascript">
         var ua = navigator.userAgent.toLowerCase(); //获取判断用的对象
         //判断是否是微信下访问
         if (ua.match(/MicroMessenger/i) == "micromessenger") {
@@ -67,22 +68,17 @@
 </head>
 
 <body style="margin: 0; background: #ddd;" align="center">
-    <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
+    <div style="align: center; display: none"><img src="res/share.jpg" width="10%" /></div>
 
-    <div id="canvasDiv" style="width:100%;height:100%;">
+    <div id="canvasDiv" style="width: 100%; height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
-
-        <video id="contentElement" style="display:none;position: absolute;top:0px;left: 0px;">
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.mp4"></source>
-                <source src="http://rmcdn.2mdn.net/Demo/vast_inspector/android.webm"></source>
-      </video>
-        <div id="block-Box" style="display:block;width:100%;height:100%;"></div>
     </div>
 
 
 
-    <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div>
-    <div id="loadingText" style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
+    <!-- <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div> -->
+    <div id="loadingText"
+        style="width:100%;display: none;text-align:center;position:absolute;top:45%;z-index:2;font-size:20px;color:#f99f0a">
         loading......0%
     </div>
 
@@ -96,8 +92,32 @@
         <img src="res/loading.gif" width="7%" height="7%" />
     </div>
 
+    <div style="display: none;" id="image1">
+        <img style="width: 100%;" src="res/ad2.png">
+    </div>
+    <div id="image2">
+        <img style="width: 100%;" src="res/ad1.png">
+    </div>
+    <script>
+        // 画像の要素を取得
+        var image1 = document.getElementById('image1');
+        var image2 = document.getElementById('image2');
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+        // 2秒ごとに画像の表示を切り替える
+        setInterval(switchImage, 10000);
+
+        // 画像の表示を切り替える関数
+        function switchImage() {
+            if (image1.style.display == 'none') {
+                image1.style.display = 'block';
+                image2.style.display = 'none';
+            } else {
+                image1.style.display = 'none';
+                image2.style.display = 'block';
+            }
+        }
+    </script>
+
     <script type="text/javascript" src="ads.js"></script>
 
     <script src="src/settings.js" charset="utf-8"></script>
@@ -137,7 +157,7 @@
 
         var loadintT = document.getElementById("loadingText");
         var loadintGif = document.getElementById("loadingImg")
-        setTimeout(function() {
+        setTimeout(function () {
             loadintGif.remove();
             loadintT.style.display = ""
             updateLabView(0.1);
@@ -155,7 +175,7 @@
             var winHeight = document.documentElement.clientHeight;
             document.getElementById("canvasDiv").style.height = winHeight + "px";
         };
-        window.onload = function() {
+        window.onload = function () {
             document.getElementById("block-Box").style.display = "none";
         }
 
@@ -163,7 +183,7 @@
             if (timer != null) {
                 clearInterval(timer);
             }
-            timer = setInterval(function() {
+            timer = setInterval(function () {
                 tempSeconds++;
                 actualTotal();
                 var loadintT = document.getElementById("loadingText")
@@ -231,37 +251,37 @@
 
     <script>
         window.adsbygoogle = window.adsbygoogle || [];
-        const adBreak = function(o) {
+        const adBreak = function (o) {
             adsbygoogle.push(o);
         }
     </script>
 
 
     <script type="text/javascript">
-        (function() {
-            // open web debugger console
-            if (typeof VConsole !== 'undefined') {
-                window.vConsole = new VConsole();
-            }
+            (function () {
+                // open web debugger console
+                if (typeof VConsole !== 'undefined') {
+                    window.vConsole = new VConsole();
+                }
 
-            var splash = document.getElementById('splash');
-            splash.style.display = 'block';
+                var splash = document.getElementById('splash');
+                splash.style.display = 'block';
 
 
-            console.log("indexlTextTTTT");
+                console.log("indexlTextTTTT");
 
-            var cocos2d = document.createElement('script');
-            cocos2d.async = true;
-            cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.js';
+                var cocos2d = document.createElement('script');
+                cocos2d.async = true;
+                cocos2d.src = window._CCSettings.debug ? 'cocos2d-js.js' : 'cocos2d-js-min.js';
 
-            var engineLoaded = function() {
-                document.body.removeChild(cocos2d);
-                cocos2d.removeEventListener('load', engineLoaded, false);
-                window.boot();
-            };
-            cocos2d.addEventListener('load', engineLoaded, false);
-            document.body.appendChild(cocos2d);
-        })();
+                var engineLoaded = function () {
+                    document.body.removeChild(cocos2d);
+                    cocos2d.removeEventListener('load', engineLoaded, false);
+                    window.boot();
+                };
+                cocos2d.addEventListener('load', engineLoaded, false);
+                document.body.appendChild(cocos2d);
+            })();
     </script>
 
 
