--- a/index.html
+++ b/index.html
@@ -117,13 +117,25 @@
             }
         }
     </script>
-    <div id="takadakenshi" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 2;">
+    <div id="soumatou0" style="display: none;  width: 100%; height: 100%; position: fixed; z-index: 6;">
+        <img src="res/masaobottyan.webp" style="height: 100%; margin: auto;">
+    </div>
+    <div id="soumatou1" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 5;">
+        <img src="res/masaoseizinsiki.webp" style="height: 100%; margin: auto;">
+    </div>
+    <div id="soumatou2" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 4;">
+        <img src="res/masaobubblehead720.webp" style="height: 100%; margin: auto;">
+    </div>
+    <div id="soumatou3" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 3;">
+        <img src="res/masaosenzai.webp" style="height: 100%; margin: auto;">
+    </div>
+    <div id="soumatou4" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 2;">
         <img src="res/takadakenshi.webp" style="height: 100%; margin: auto;">
     </div>
-    <div id="mikotoba" style="color: black; display: none; position: fixed; z-index: 3; width: 100%; bottom: 10%; text-align: center; font-family: serif; font-size: 2em;">
+    <div id="soumatou5" style="display: none; color: black; position: fixed; z-index: 1; width: 100%; bottom: 10%; text-align: center; font-family: serif; font-size: 2em;">
         <p>松っちゃん</p>
         <p>ほんまおめでとう</p>
-        <p><a>天地創造</a></p>
+        <button>ゲームに戻る</button>
     </div>
 
     <script type="text/javascript" src="ads.js"></script>
