--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </head>
 
-<body style="margin: 0; background: #ddd;" align="center">
+<body style="margin: 0;" align="center">
     <div style="align: center; display: none"><img src="res/share.jpg" width="10%" /></div>
 
     <div id="canvasDiv" style="width: 100%; height:100%;">
