--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <title>マサオゲーム</title>
     <meta name="description"
         content="ほらタケシ！ほら、なぁ？お前マサオがお前マサオになったぞぉ！ほらー！マサオがお前マサオになったぞぉ！でマサオだぁ。ほらマサオ落としたらマサオになってマサオになっちゃった！マサオは何になるかなほぉら松だぁ。">
-    <meta name="keywords" content="文化と教育, バツイチノンデリバカワキガ, ボーマンダ　エロ, 布団ちゃん">
+    <meta name="keywords" content="文化と教育, バツイチノンデリバカワキガ, 肛門開発キャバ100万貢ぎ38才独身, 嘘つきチョコチップ, ボーマンダ　エロ, 布団ちゃん, 魔神の食卓">
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport"
@@ -142,74 +142,106 @@
             document.getElementById(fakeads[currentIndex]).style.display = 'block';
         }
 
-        // 3秒ごとに次の画像を表示する
+        // 10秒ごとに次の画像を表示する
         setInterval(showNextFakead, 10000);
     </script>
 
     <div id="blackout"
-        style="display: none; opacity: 0; width: 100%; height: 100%; position: fixed; z-index: 10; background-color: black;">
+        style="display: none; opacity: 0; width: 100%; height: 100%; position: fixed; z-index: 12; background-color: black;">
     </div>
-    <div id="soumatou0" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 9;">
-        <img src="res/masaobottyan.webp" style="height: 100%; margin: auto;">
-        <div id="soumatou0-txt" style="position: absolute; bottom: 10%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 2em;">
+    <div id="soumatou0" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 11;">
+        <img src="res/masaosenzai.webp" style="height: 100%; margin: auto;">
+        <div id="soumatou0-txt"
+            style="position: absolute; bottom: 10%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 2em;">
+            <p>魔神</p>
+            <p>布団ちゃん</p>
+            <p>本名：松本匡生</p>
+        </div>
+    </div>
+    <div id="soumatou1" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 10;">
+        <img src="res/masao-bottyan31080.webp" style="height: 100%; margin: auto;">
+        <div id="soumatou1-txt"
+            style="position: absolute; bottom: 10%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 2em;">
             <p>1985年7月6日</p>
             <p>千葉県館山市にて生を受ける</p>
         </div>
     </div>
-    <div id="soumatou1" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 8;">
+    <div id="soumatou2" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 9;">
         <img src="res/masaoseizinsiki.webp" style="height: 100%; margin: auto;">
-        <div id="soumatou1-txt" style="position: absolute; bottom: 10%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
+        <div id="soumatou2-txt"
+            style="position: absolute; bottom: 10%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
             <p>高校時代は昼食代をカップ麺と煙草に使っていた</p>
             <p>成人式の日には道端で排便をした</p>
             <p>そんな青春時代だった</p>
         </div>
     </div>
-    <div id="soumatou2" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 7; background-color: black;">
-        <img src="res/hutonandyocchan.webp" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
-        <div id="soumatou2-txt" style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
+    <div id="soumatou3"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 8; background-color: black;">
+        <img src="res/hutonandyocchan.webp"
+            style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
+        <div id="soumatou3-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
             <p>2010年7月7日</p>
             <p>ニコニコ動画にて活動開始</p>
-            <p>得意のギターが好評だった</p>
+            <p>得意のギターで視聴者を魅了した</p>
         </div>
     </div>
-    <div id="soumatou3" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 6;">
+    <div id="soumatou4"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 7; background-color: black;">
         <img src="res/masaobubblehead720.webp" style="height: 100%; margin: auto;">
-        <div id="soumatou3-txt" style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 2em;">
+        <div id="soumatou4-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 2em;">
             <p>2017年4月</p>
             <p>OPENRECでの活動開始</p>
             <p>風来のシレン実況で王への道を歩みだした</p>
         </div>
     </div>
-    <div id="soumatou4" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 5; background-color: black;">
-        <img src="res/gsa2021.webp" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
-        <div id="soumatou4-txt" style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
+    <div id="soumatou5"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 6; background-color: black;">
+        <img src="res/gsa2021.webp"
+            style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
+        <div id="soumatou5-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
             <p>2020年</p>
             <p>チャンピオン集団を抜け配信に専念</p>
             <p>2021年にはゲームストリーマーアワード急上昇賞を受賞</p>
         </div>
     </div>
-    <div id="soumatou5" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 4; background-color: black;">
+    <div id="soumatou6"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 5; background-color: black;">
         <img src="res/majinnohitosara-tutaya1080.webp" style="height: 100%; margin: auto;">
-        <div id="soumatou5-txt" style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
+        <div id="soumatou6-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
             <p>2023年6月</p>
             <p>自身のYouTubeチャンネル「魔神の食卓」より料理本「魔神の一皿」を出版</p>
             <p>Amazon.co.jp売れ筋ランキングの本カテゴリで1位を獲得</p>
         </div>
     </div>
-    <div id="soumatou6" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 3; background-color: black;">
-        <img src="res/crcupst62023.webp" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
-        <div id="soumatou6-txt" style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; text-align: center; font-family: serif; font-size: 1.2em;">
+    <div id="soumatou7"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 4; background-color: black;">
+        <img src="res/crcupst62023.webp"
+            style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: auto; margin: auto;">
+        <div id="soumatou7-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; text-align: center; font-family: serif; font-size: 1.2em;">
             <p>2023年9月24日</p>
             <p>「第2回 CRカップ Street Fighter 6」にてチーム優勝</p>
             <p>アジア最大級のeスポーツ大会に掛け算より先に覚えた昇龍拳で臨んだ</p>
             <p>※本人は全敗</p>
         </div>
     </div>
-    <div id="soumatou7" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 2;">
+    <div id="soumatou8"
+        style="display: none; width: 100%; height: 100%; position: fixed; z-index: 3; background-color: black;">
+        <img src="res/masao-gansya.webp" style="height: 100%; margin: auto;">
+        <div id="soumatou8-txt"
+            style="position: absolute; bottom: 5%; color: white; text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; width: 100%; text-align: center; font-family: serif; font-size: 1.5em;">
+            <p>魔神の講釈はこれからも続く…</p>
+        </div>
+    </div>
+    <div id="soumatou9" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 2;">
         <img src="res/takadakenshi.webp" style="height: 100%; margin: auto;">
     </div>
-    <div id="soumatou8"
-        style="display: none; opacity: 0; color: black; text-shadow: #FC0 1px 0 10px; position: fixed; z-index: 11; width: 100%; bottom: 10%; text-align: center; font-family: serif; font-size: 2em;">
+    <div id="soumatou10"
+        style="display: none; opacity: 0; color: black; text-shadow: #FC0 1px 0 10px; position: fixed; z-index: 13; width: 100%; bottom: 10%; text-align: center; font-family: serif; font-size: 2em;">
         <p>ほんま</p>
         <p style="opacity: 0;">よう頑張った</p>
         <button style="visibility: hidden;">ゲームに戻る</button>
