--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
 <body style="margin: 0;" align="center">
     <div id="kassanBGM"
-        style="display: none; position: fixed; width: 100vw; height: 100vh; margin: 0 calc(50% - 50vw);">
+        style="display: none; position: fixed; width: 100vw; height: 100%; margin: 0 calc(50% - 50vw);">
         <div id="player"></div>
     </div>
 
     <div style="position: fixed; width: 100vw; height: 100vh; margin: 0 calc(50% - 50vw);">
         <div id="achievement"
-            style="color: black; background-color: chartreuse; display: flex; align-items: center; position: absolute; right: -50%; bottom: 9%; width: auto; height: 3.8em; border-radius: 1.9em 0% 0% 1.9em;">
+            style="color: black; background-color: chartreuse; display: flex; align-items: center; position: absolute; right: -100%; bottom: 9%; width: auto; height: 3.8em; border-radius: 1.9em 0% 0% 1.9em;">
             <img src="res/takada-ico.webp" style="width: 3em; height: 3em; margin: 0.4em;"">
             <div style=" margin: 0.5em;">実績を解除「<span
                 style="color: darkmagenta; font-weight: bold;">名前を言ってはいけないあの人</span>」<br>特別なBGMが開放：YouTubeからロードできます
@@ -119,7 +119,7 @@
     <div id="canvasDiv" style="width: 100%; height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
     </div>
-
+    <div style="color: aliceblue; background-color: rgba(0, 0, 0, 0.5); position: fixed; top: 0; width: 100%; height: auto; font-size: 1em; ">Thanks for playing, Machaaaaao😻 !</div>
     <!-- <button onclick="fs()" style="position: fixed; left: 0; top: 0;">フルスクリーン</button> -->
 
     <!-- <div id="adContainer" style="display:none;position: absolute;top:0px;left: 0px;width:100%;height:100%;z-index:999;"></div> -->
