--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         ⠘⠘⠘⠘⠐⠃⠓⠛⠛⠛⠂⠐⠀⠈⠀⠈⠘⠀⠈⠀⠐⠀⠂⠀⠀⠀⠀⠀⠁⠀ 
     -->
     <!--
-        AB
+        PW
     -->
 
     <meta charset="utf-8">
@@ -99,34 +99,27 @@
 
 <body style="margin: 0;" align="center">
     <div id="kassanBGM" style="display: none; position: fixed; width: 100vw; height: 100%; margin: 0 calc(50% - 50vw);">
-        <div id="player"></div>
+        <div id="player1"></div>
     </div>
-
     <div id="vsGodBGM" style="display: none; position: fixed; width: 100vw; height: 100%; margin: 0 calc(50% - 50vw);">
-        <div id="player"></div>
+        <div id="player2"></div>
+    </div>
+    <div id="takadakenshiAtZanarkand"
+        style="display: none; opacity: 0.5; position: fixed; width: 100vw; height: 100%; margin: 0 calc(50% - 50vw);">
+        <div id="player3"></div>
+    </div>
+    <div id="runnewdave"
+        style="display: none; position: fixed; width: 100vw; height: 100%; margin: 0 calc(50% - 50vw);">
+        <div id="player4"></div>
     </div>
 
-    <div style="position: fixed; width: 100vw; height: 100vh; margin: 0 calc(50% - 50vw);">
-        <div id="achievement"
-            style="color: black; background-color: chartreuse; display: flex; align-items: center; position: absolute; right: -100%; bottom: 9%; width: auto; height: 3.8em; border-radius: 1.9em 0% 0% 1.9em;">
-            <img src="res/takada-ico.webp" style="width: 3em; height: 3em; margin: 0.4em;"">
-            <div style=" margin: 0.5em;">実績を解除「<span
-                style="color: darkmagenta; font-weight: bold;">名前を言ってはいけないあの人</span>」<br>特別なBGMが開放：YouTubeからロードできます
-        </div>
-        <button onclick="startKassanBGM()"
-            style="color: white; background-color: red; width: 4em; height: 3em; border-radius: 1.5em; font-size: 1em;">Play</button>
-    </div>
-    </div>
-
-    <div style="align: center; display: none"><img src="res/share.jpg" width="10%" /></div>
-
-    <div id="canvasDiv" style="width: 100%; height:100%;">
+    <div id="canvasDiv" style="opacity: 1; width: 100%; height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
     </div>
 
-    <div
+    <div id="news"
         style="color: aliceblue; background-color: rgba(0, 0, 0, 0.5); position: fixed; top: 0; width: 100%; height: auto; font-size: 1em; ">
-        Thanks for playing Machao😻 If you want to play "effect" again, remove cookie. <span style="color: chartreuse;">AB</span></div>
+    </div>
 
     <div id="marquee-container" style="font-family: MS Gothic;"></div>
     <script src="src/momarquee.js" charset="utf-8"></script>
@@ -148,7 +141,7 @@
     <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
         <img src="res/loading.gif" width="20%" height="20%" />
     </div>
-    <span id="fakeadsaria">
+    <span id="fakeadsaria" style="opacity: 1;">
         <div id="image1" style="display: block; position: fixed; z-index: 1; bottom: 0;">
             <img style="width: 100%; display: block;" src="res/fakeads1-min.png">
         </div>
@@ -179,7 +172,7 @@
     </script>
 
     <div id="blackout"
-        style="display: none; opacity: 1; width: 100%; height: 100%; position: fixed; z-index: 12; background-color: black;">
+        style="display: none; opacity: 0; width: 100%; height: 100%; position: fixed; z-index: 12; background-color: black;">
     </div>
     <div id="soumatou0" style="display: none; width: 100%; height: 100%; position: fixed; z-index: 11;">
         <img src="res/masaosenzai.webp" style="height: 100%; margin: auto;">
@@ -279,23 +272,77 @@
         <button style="visibility: hidden;">ゲームに戻る</button>
     </div>
 
-    <!-- <div id="vsGod"
-        style="color: white; background-color: blue; display: block; width: 90%; height: 90%; left: 5%; top: 5%; position: fixed; z-index: 13; font-family: 'DotGothic16', sans-serif;">
+    <div id="vsGod"
+        style="color: white; display: none; width: 90%; height: 90%; left: 5%; top: 5%; position: fixed; z-index: 13; font-family: 'DotGothic16', sans-serif;">
         <div
-            style="background-color: black; display: flex; width: 90%; height: 1em; margin: auto; border: 5px solid white;">
-            <div style="background-color: yellow; width: 100%; height: 100%;"></div>
+            style="visibility: visible; display: flex; width: 90%; height: 1em; margin: 0px auto 1em; border: 5px solid white;">
+            <div style="background-color: yellow; visibility: hidden; width: 100%; height: 100%;"></div>
         </div>
-        <div style="height: 40%; margin: auto;">
+        <div id="correctImage" style="visibility: hidden; height: 40%; margin: 0px auto 1em;">
             <img src="res/eddo.webp" style="height: 100%;">
         </div>
-        <!-- <div style="width: 90%; height: 40%; margin: auto; border: 5px solid white; border-radius: 1em;">
-            <p>高田健志が以前所属していたお笑いコンビは次のうちどれ？</p>
-            <div style="background-color: green; display: flex; flex-wrap: wrap;">
-                <div style="color: white; background-color: red; width: 50%;">ダウンタウン</div><div style="color: white; background-color: red; width: 50%;">コント55号</div>
-                <div style="color: white; background-color: red; width: 50%;">オリエンタルラジオ</div><div style="color: white; background-color: red; width: 50%;">レイザーラモン</div>
+        <div id="incorrectImage" style="display: none; height: 40%; margin: 0px auto 1em;">
+            <img src="res/guruguru.webp" style="height: 100%;">
+        </div>
+        <div
+            style="display: flex; justify-content: center; align-items: center; width: 90%; height: 40%; margin: 0px auto 1em; border: 5px solid white; border-radius: 1em;">
+            <div id="switchGodBGV" style="display: block; flex-wrap: wrap; gap: 1em;">
+                <button onclick="vsGodWithBGV()" class="selectbgm"
+                    style="width: 100%; font-size: 1.5em;">YouTubeよりBGVをロードする</button>
+                <button onclick="vsTakadaKenshi()" class="selectbgm" style="width: 100%; font-size: 1.5em;">しない</button>
             </div>
-        </div> -->
-    </div> -->
+            <div id="donmo" style="display: none; font-size: 2em;">
+                「どんもー」
+            </div>
+            <div id="encountTakada" style="display: none; font-size: 1.5em;">
+                えちえち高田健志があらわれた！
+            </div>
+            <div id="quiz" style="display: none;">
+                <p>高田健志が以前所属していたお笑いコンビは次のうちどれ？</p>
+                <div style="display: flex; flex-wrap: wrap; ">
+                    <div class="choices" style="width: 50%;">ダウンタウン</div>
+                    <div class="choices" style="width: 50%;">コント55号</div>
+                    <div class="choices" style="width: 50%;">オリエンタルラジオ</div>
+                    <div class="choices" style="width: 50%;">レイザーラモン</div>
+                </div>
+            </div>
+            <div id="attack" style="display: none; font-size: 2em;">
+                黙祷は意味ないと思ってるから正直。
+            </div>
+            <div id="incorrectMessage" style="display: none; font-size: 1.5em;">
+                高田健志はぐるぐるしている！
+            </div>
+        </div>
+        <button onclick="lifelineTelephone()" id="lifelineTel"
+            style="display: none; color: black; background-color: white; width: 90%; height: auto; margin: 0px auto 1em; border: none; font-family: 'DotGothic16', sans-serif;">
+            テレフォン</div>
+    </div>
+
+    <div id="whiteout"
+        style="display: none; opacity: 0; width: 100%; height: 100%; position: fixed; z-index: 14; background-color: white;">
+    </div>
+
+    <div id="achievement"
+        style="color: black; background-color: chartreuse; display: flex; align-items: center; width: auto; height: 3.8em; position: fixed; right: -100%; bottom: 10%; z-index: 15; margin: 0 calc(50% - 50vw); border-radius: 1.9em 0% 0% 1.9em;">
+        <img src="res/takada-ico.webp" style="width: 3em; height: 3em; margin: 0.4em;"">
+            <div style=" margin: 0.5em;">実績を解除「<span
+            style="color: darkmagenta; font-weight: bold;">名前を言ってはいけないあの人</span>」<br>特別なBGMが開放：YouTubeからロードできます
+    </div>
+    <button onclick="startKassanBGM()"
+        style="color: white; background-color: red; width: 4em; height: 3em; border-radius: 1.5em; font-size: 1em;">Play</button>
+    </div>
+    <div id="announceYuyuta"
+        style="color: white; background-color: black; display: flex; align-items: center; width: auto; height: 3.8em; position: fixed; right: -100%; bottom: 10%; z-index: 15; margin: 0 calc(50% - 50vw); border-radius: 1.9em 0% 0% 1.9em;">
+        <img src="res/yuyuta-ico.webp" style="width: 3em; height: 3em; margin: 0.4em;""><!-- https://creativecommons.org/licenses/by/3.0/deed.en -->
+        <div style=" margin: 0.5em;">伴奏：鈴木悠太
+    </div>
+    </div>
+    <div id="announceTakada"
+        style="color: black; background-color: gold; display: flex; align-items: center; width: auto; height: 3.8em; position: fixed; right: -100%; bottom: 10%; z-index: 12; margin: 0 calc(50% - 50vw); border-radius: 1.9em 0% 0% 1.9em;">
+        <img src="res/takada-ico-gold.webp" style="width: 3em; height: 3em; margin: 0.4em;"">
+        <div style=" margin: 0.5em;">神【GOD】モード突入<span style="color: tomato; font-weight: bold;">ポイントx1000</span>
+    </div>
+    </div>
 
     <script type="text/javascript" src="ads.js"></script>
 
